--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,6 +3,6 @@
   "semi": true,
   "singleQuote": true,
   "quoteProps": "as-needed",
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "arrowParens": "avoid"
 }
