--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.1",
     "styled-components": "5.3.5",
-    "zustand": "4.0.0"
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^28.1.3",
